[package]
name = "comic-archiver"
version = "0.1.0"
edition = "2021"
description = "A tool for archiving web comics"

[[bin]]
name = "comic-archiver"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.7"
